[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://src/scenes/Results.gd" id=1]
[ext_resource type="PackedScene" path="res://src/visual/BackgroundController.tscn" id=2]
[ext_resource type="Script" path="res://src/ui/GlassPanel.gd" id=3]
[ext_resource type="Theme" path="res://src/ui/UiTheme.tres" id=4]
[ext_resource type="Script" path="res://src/ui/LiquidGlassButton.gd" id=5]

[node name="Results" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
theme = ExtResource( 4 )

[node name="BackgroundController" parent="." instance=ExtResource( 2 )]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="ColorRect" parent="UI"]
script = ExtResource( 3 )
anchor_left = 0.12
anchor_top = 0.2
anchor_right = 0.88
anchor_bottom = 0.8
blur_radius = 5.2
tint = Color(0.12, 0.18, 0.32, 0.22)
edge = Color(0.9, 0.96, 1, 0.2)
corner_radius = 0.11
edge_width = 1.1
warp_intensity = 0.12
strength_x = 8.0
strength_y = 8.0
chromatic_strength = 0.18
color = Color(0.12, 0.18, 0.32, 0.22)

[node name="Scroll" type="ScrollContainer" parent="UI/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="UI/Panel/Scroll"]
size_flags_horizontal = 3
alignment = 1
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="UI/Panel/Scroll/VBox"]
text = "Color Crunch"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 54

[node name="Score" type="Label" parent="UI/Panel/Scroll/VBox"]
text = "Score: 0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 84

[node name="ModeBadge" type="Label" parent="UI/Panel/Scroll/VBox"]
text = "Mode: Pure"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20

[node name="Best" type="Label" parent="UI/Panel/Scroll/VBox"]
text = "Best: 0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 30

[node name="Streak" type="Label" parent="UI/Panel/Scroll/VBox"]
text = "Streak: 0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 30

[node name="OnlineStatus" type="Label" parent="UI/Panel/Scroll/VBox"]
text = "Online: connecting..."
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="Leaderboard" type="Label" parent="UI/Panel/Scroll/VBox"]
text = "Leaderboard loading..."
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24
autowrap_mode = 2

[node name="CoinsEarned" type="Label" parent="UI/Panel/Scroll/VBox"]
text = "Coins earned: 0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="CoinBalance" type="Label" parent="UI/Panel/Scroll/VBox"]
text = "Coins balance: 0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 22

[node name="DoubleReward" type="Button" parent="UI/Panel/Scroll/VBox"]
script = ExtResource( 5 )
text = "Watch Ad: Double Coins"
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 88)

[node name="Spacer" type="Control" parent="UI/Panel/Scroll/VBox"]
size_flags_vertical = 3

[node name="PlayAgain" type="Button" parent="UI/Panel/Scroll/VBox"]
script = ExtResource( 5 )
text = "Play Again"
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 118)

[node name="Menu" type="Button" parent="UI/Panel/Scroll/VBox"]
script = ExtResource( 5 )
text = "Main Menu"
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 118)

[connection signal="pressed" from="UI/Panel/Scroll/VBox/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="UI/Panel/Scroll/VBox/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="UI/Panel/Scroll/VBox/DoubleReward" to="." method="_on_double_reward_pressed"]
